[package]
name = "mssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive"] }
console = "0.15.8"
emojis = "0.6.2"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
russh = "0.43.0"
russh-keys = "0.43.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shell-escape = "0.1.5"
tabled = "0.15.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
